File: fix firing `change` event on Safari

--- a/less/file.less
+++ b/less/file.less
@@ -11,7 +11,8 @@
     margin-bottom: 0;
     padding: 0;
 
-    button {
+    .button {
+        border: none;
         & > * {
             height: 24px;
             max-width: 24px;
@@ -27,7 +28,7 @@
     }
 
     &.disabled {
-        button {
+        .button {
             background-color: @light;
             color: darken(@light, 10%);
         }
@@ -36,7 +37,7 @@
     .prepend {order: 1}
     .append {order: 4}
     .caption {order: 2;}
-    button {
+    .button {
         order: 3;
         margin-left: auto;
         height: 34px;
